--- a/style.css
+++ b/style.css
@@ -227,3 +227,83 @@ body {
         padding: 50px;
     }
 }
+
+/* 콘텐츠 D: 개요(이미지 + 글자: 반대로 배치하기) */
+.conD {
+    background-image: url(img/life.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.conD .text {
+    padding: 20px;
+    background-color: rgba(255,255,255,0.5);
+}
+
+.conD .container {
+    padding-top: 2px;
+}
+
+.conD .photo {
+    min-height: 200px;
+    background-image: none;
+    background-position: center;
+}
+
+.conD h2 {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.conD p {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 14px;
+    line-height: 1.8;
+    opacity: 0.8;
+}
+
+.conD a {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 30px;
+    box-shadow: 0 0 0 1px #888;
+    border: solid 3px currentColor;
+    border-radius: 6px;
+    background-color: #BF6A7A;
+    background-color: var(--accent-color);
+    color: #fff;
+    color: var(--text-bright-color);
+    font-size: 14px;
+    text-decoration: none;
+}
+
+.conD a:hover {
+    background-image: linear-gradient(
+        rgba(255,255,255,0.2),
+        rgba(255,255,255,0.2)
+    );
+}
+
+@media (min-width: 768px) {
+    .conD .container {
+        display: flex;
+        flex-direction: row-reverse;
+        max-width: 1000px;
+        max-width: var(--large-width);
+        margin-left: auto;
+        margin-right:auto;
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+    
+    .conD .photo {
+        flex: 3;
+    }
+    
+    .conD .text {
+        flex: 2;
+        padding: 50px;
+    }
+}
