--- a/style.css
+++ b/style.css
@@ -8,8 +8,31 @@
     --text-bright-color: #fff;
     --icon-color: #fff;
     --icon-bk-color: #ddd;
+    --gray-color: #ddd;
     --large-width: 1000px;
+    --middle-width: 800px;
 }
+
+/* 기본 설정: 폰트 크기 */
+@media (max-width: 599px) {
+    :root {
+        font-size: 14px
+    }
+}
+
+@media (min-width: 600px) and (max-width: 799px){
+    :root {
+        font-size: 16px;
+    }
+}
+
+@media (min-width: 800px) {
+    :root {
+        font-size: 18px;
+    }
+}
+
+body {font-size: 16px;}
 
 /* 기본 설정: 페이지 전체*/
 body {
@@ -452,6 +475,12 @@ header {
     background-color: rgba(255, 255, 255, 0.9);
 }
 
+.nohero header {
+    position: static;
+    border-bottom: solid 1px #ddd;
+    border-bottom: solid 1px var(--gray-color);
+}
+
 /* 헤더A: 사이트 이름 */
 .headA {
     display: inline-block;
@@ -499,5 +528,140 @@ header {
 
     .headB ul {
         display: flex;
+    }
+}
+
+/* 헤더C: 토글 버튼 */
+@media (max-width: 767px) {
+    /* 작은 화면 전용 설정 */
+    header .container-small {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .headC {
+        margin-right: 10px;
+        padding: 0;
+        border: none;
+        outline: none;
+        background: none;
+        font-size: 28px;
+        opacity: 0.5;
+        cursor: pointer;
+    }
+
+    .headC:hover {
+        opacity: 0.3;
+    }
+
+    .headB {
+        display: none;
+    }
+}
+
+@media (min-width: 768px) {
+    /* 큰 화면 전용 설정 */
+    .headC {
+        display: none;
+    }
+
+    .headB {
+        display: block !important;
+    }
+}
+
+/* 콘텐츠 페이지: 기사 */
+.post .container {
+    max-width: 800px;
+    max-width: var(--middle-width);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px 10px;
+}
+
+.post h1 {
+    padding-left: 0.5rem;
+    border-left: solid 0.75rem #BF6A7A;
+    border-left: solid 0.75rem var(--accent-color); 
+    font-size: 2rem;
+}
+
+.post p {
+    font-size: 1rem;
+    line-height: 2;
+}
+.post img {
+    max-width: 100%;
+}
+
+/* 콘텐츠 페이지: 빵 부스러기 리스트 */
+.bread ol {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.bread a {
+    display: block;
+    padding: 5px;
+    color: inherit;
+    font-size: 0.875rem;
+    text-decoration: none;
+}
+
+.bread a::after {
+    margin-left: 10px;
+    content: '\f054';
+    font-family: 'FontAwesome';
+    opacity: 0.3;
+}
+
+.bread a:hover {
+    background-color: rgba(0,0,0,0.3)
+}
+
+/* 소개 페이지: 이미지와 연혁 */
+.history {
+    background-color: #5D9AB2;
+    background-color: var(--main-color);
+    color: #fff;
+    color: var(--text-bright-color);
+}
+
+.history .text {
+    padding: 20px;
+}
+
+.history h2 {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+}
+
+.history .photo {
+    min-height: 300px;
+    background-image: url(img/plant.jpg);
+    background-position: center;
+    background-size:cover;
+}
+
+@media (min-width: 768px) {
+    .history .container {
+        display: flex;
+        max-width: 1000px;
+        max-width: var(--large-width);
+        margin-left: auto;
+        margin-right:auto;
+    }
+    
+    .history .photo {
+        flex: 3;
+    }
+    
+    .history .text {
+        flex: 2;
+        padding: 50px;
     }
 }
