--- a/style.css
+++ b/style.css
@@ -647,6 +647,28 @@ header {
     background-size:cover;
 }
 
+.history table {
+    border-collapse: collapse;
+    border-top: solid 1px #ddd;
+    border-top: solid 1px var(--gray-color);
+    font-size: 0.875rem;
+}
+
+.history th,
+.history td {
+    padding-top: 1.8rem;
+    padding-bottom: 1.8rem;
+    border-bottom: solid 1px #ddd;
+    border-bottom: solid 1px var(--gray-color)
+}
+
+.history th {
+    padding-right: 1rem;
+    text-align: left;
+    word-break: keep-all;
+}
+
+
 @media (min-width: 768px) {
     .history .container {
         display: flex;
@@ -664,4 +686,72 @@ header {
         flex: 2;
         padding: 50px;
     }
+}
+
+/* 문의 페이지: 문의 대상 */
+.contact {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 20px;
+    border: solid 1px #ddd;
+    border: solid 1px var(--gray-color);
+    text-align: center;
+}
+
+.contact span {
+    display: inline-block;
+    margin-bottom: 20px;
+    font-size: 2.2rem;
+    width: 2em;
+    line-height: 2em;
+    border-radius: 50%;
+    text-align: center;
+    background-color: #5D9AB2;
+    background-color: var(--main-color);
+    color: #fff;
+    color: var(--icon-color);
+}
+
+.contact h2 {
+    margin-top: 0;
+    font-size: 1.2rem;
+}
+
+.contact a {
+    font-size: 1.4rem;
+    color: inherit;
+    text-decoration: none;
+}
+
+@media (min-width: 768px) {
+    .contact-wrap {
+        display: flex;
+    }
+
+    .contact {
+        flex: 1;
+    }
+
+    .contact:first-child {
+        margin-right: 20px;
+    }
+}
+
+/* 문의 페이지: 지도 */
+.location iframe {
+    width: 100%;
+    height: 400px;
+    vertical-align: bottom;
+}
+
+.location h2 {
+    margin: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #5D9AB2;
+    background-color: var(--main-color);
+    color: #fff;
+    color: var(--text-bright-color);
+    font-size: 1.5rem;
+    text-align: center;
 }
